<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetDBActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dikkat"
        android:textColor="#F80202"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_warning"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSayi1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_251"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arti"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSayi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_753"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sembolEsittir"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etIslemSonucu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btSilmeyiOnayla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onayla" />

    <Button
        android:id="@+id/btSilmektenVazgec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vazgec" />
</LinearLayout>