<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderAddActivity">


    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="161dp"
        android:layout_height="138dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="133dp"
        android:layout_marginEnd="8dp"
        android:text="@string/surucu_no"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spSurucuNo"
        app:layout_constraintEnd_toStartOf="@+id/spSurucuNo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/spSurucuNo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/siparis_no"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etSiparisNo"
        app:layout_constraintEnd_toStartOf="@+id/etSiparisNo"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etSiparisNo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/tutar"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etUcret"
        app:layout_constraintEnd_toStartOf="@+id/etUcret"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/etUcret"
        app:layout_constraintVertical_bias="0.476" />

    <Spinner
        android:id="@+id/spSurucuNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="24dp"
        android:scrollbarSize="28dp"
        app:layout_constraintStart_toStartOf="@+id/etSiparisNo"
        app:layout_constraintTop_toBottomOf="@+id/etSiparisNo" />

    <Spinner
        android:id="@+id/spOdemeYontemi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:scrollbarSize="28dp"
        app:layout_constraintStart_toStartOf="@+id/spSurucuNo"
        app:layout_constraintTop_toBottomOf="@+id/spSurucuNo" />

    <EditText
        android:id="@+id/etUcret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:hint="@string/_000_00"
        android:inputType="numberDecimal"

        android:maxLength="6"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/spOdemeYontemi"
        app:layout_constraintTop_toBottomOf="@+id/spOdemeYontemi" />

    <EditText
        android:id="@+id/etSiparisNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:hint="@string/_0000"
        android:inputType="none|number"
        android:maxLength="4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/timePicker1"
        app:layout_constraintTop_toBottomOf="@+id/timePicker1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/odeme_yontemi"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spOdemeYontemi"
        app:layout_constraintEnd_toStartOf="@+id/spOdemeYontemi"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/spOdemeYontemi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro_symbol"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etUcret"
        app:layout_constraintStart_toEndOf="@+id/etUcret"
        app:layout_constraintTop_toTopOf="@+id/etUcret" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/saat"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/timePicker1"
        app:layout_constraintEnd_toStartOf="@+id/timePicker1"
        app:layout_constraintTop_toTopOf="@+id/timePicker1" />

    <Button
        android:id="@+id/btVazgec"
        android:layout_width="411dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/vazgec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btKaydet" />

    <Button
        android:id="@+id/btKaydet"
        android:layout_width="411dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/siparisi_kaydet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUcret" />


</androidx.constraintlayout.widget.ConstraintLayout>