<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderAddActivity">


    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="161dp"
        android:layout_height="138dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/surucu_no"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/spDrivers"
        app:layout_constraintEnd_toStartOf="@+id/spDrivers"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/spDrivers" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/siparis_no"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/etOrderNo"
        app:layout_constraintEnd_toStartOf="@+id/etOrderNo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/etOrderNo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="104dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tutar"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/etPrice"
        app:layout_constraintEnd_toStartOf="@+id/etPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/etPrice"
        app:layout_constraintVertical_bias="0.476" />

    <Spinner
        android:id="@+id/spDrivers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="24dp"
        android:scrollbarSize="28dp"
        app:layout_constraintStart_toStartOf="@+id/etOrderNo"
        app:layout_constraintTop_toBottomOf="@+id/etOrderNo" />

    <Spinner
        android:id="@+id/spPaymentMethods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:scrollbarSize="28dp"
        app:layout_constraintStart_toStartOf="@+id/spDrivers"
        app:layout_constraintTop_toBottomOf="@+id/spDrivers" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:hint="@string/_000_00"
        android:inputType="numberDecimal"

        android:maxLength="6"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/spPaymentMethods"
        app:layout_constraintTop_toBottomOf="@+id/spPaymentMethods" />

    <EditText
        android:id="@+id/etOrderNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:hint="@string/_0000"
        android:inputType="none|number"
        android:maxLength="4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/timePicker1"
        app:layout_constraintTop_toBottomOf="@+id/timePicker1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/odeme_yontemi"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/spPaymentMethods"
        app:layout_constraintEnd_toStartOf="@+id/spPaymentMethods"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spPaymentMethods" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro_symbol"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/etPrice"
        app:layout_constraintStart_toEndOf="@+id/etPrice"
        app:layout_constraintTop_toTopOf="@+id/etPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:text="@string/saat"
        android:textColor="#050505"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/timePicker1"
        app:layout_constraintEnd_toStartOf="@+id/timePicker1"
        app:layout_constraintTop_toTopOf="@+id/timePicker1" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="411dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/vazgec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAddOrder" />

    <Button
        android:id="@+id/btAddOrder"
        android:layout_width="411dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/siparisi_kaydet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>