<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.OrderDetailsOfDriverActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvSelectedDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="7dp"
            android:text="@string/_15"
            android:textColor="#2196F3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nolu_surucunun_teslim_ettigi_paketler"
            android:textColor="#2196F3"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPaymentDriver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btBackToPaymentDriverActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sorguya_geri_don" />

</LinearLayout>